--- a/signin.html
+++ b/signin.html
@@ -94,8 +94,8 @@
 <form>
   <div class="mb-3">
       <div class="mb-3">
-    <label for="exampleInputEmail1" class="form-label">Nickname</label>
-    <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
+    <label for="exampleInputNickname" class="form-label">Nickname</label>
+    <input type="nickname" class="form-control" id="exampleInputNickname" aria-describedby="emailHelp">
     
   </div>
     <label for="exampleInputEmail1" class="form-label">e-mail</label>
@@ -108,8 +108,8 @@
     <input type="password" class="form-control" id="exampleInputPassword1">
   </div>
     <div class="mb-3">
-    <label for="exampleInputEmail1" class="form-label">Confirm password</label>
-    <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
+    <label for="exampleInputPassword" class="form-label">Confirm password</label>
+    <input type="password" class="form-control" id="exampleInputPassword" aria-describedby="emailHelp">
     
   </div>
     <div id="emailHelp" class="form-text">We'll never share your email</div>
